# casewise-claude-coordination-mcp

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CLAUDE.md  COMMIT_STRATEGY.md  CONTEXT_STATUS.md  HANDOFF.md  LICENSE  README.md  TEST_RESULTS.md  WAKE_UP_MIKE.md  decisions.md  install.sh  push_to_github.sh  pyproject.toml  quickstart.sh  requirements.txt  run_tests.py  setup.py  test_ccc_basic.py  test_ccc_comprehensive.py
ccc_workspace/: ccc_config.json
demos/: ccc_session_demo.py  definitive_session_proof.py  live_demo_session.py  live_monitor_demo.py  prove_session_control.py  spawn_three_sessions.py  test_session_control.py  working_session_control.py
docs/: HOW_TO_WATCH_LIVE.md  USER_GUIDE.md
docs/archive/: CCC_PERMISSIONS_AUDIT.txt  CCC_SESSION_STATE.md
proofs/autonomous_claude_proof/: demo_script.py  proof_of_autonomy.txt  session_report.json
proofs/ccc_orchestration_proof/: orchestrator_state.json
proofs/ccc_orchestration_proof/session_backend/: session_info.json
proofs/ccc_orchestration_proof/session_frontend/: session_info.json
proofs/ccc_orchestration_proof/session_testing/: session_info.json
proofs/ccc_parallel_proof/: ccc_orchestrator.json
proofs/controlled_claude_proof/: ccc_orchestrator_proof.json
proofs/controlled_session_proof/: ccc_control_proof.txt  claude_commands.sh  task_for_claude.txt
proofs/live_claude_demo/: hello_from_session_42.py  work_progress.txt
proofs/parallel_demo_live/: live_dashboard.txt
proofs/parallel_monitor_demo/: live_dashboard.txt
scripts/: activate_ccc.sh  ccc_claude_wrapper.sh  ccc_live_watcher.py  orchestrator_handoff.sh  setup_ccc_permissions.sh  setup_ccc_permissions_auto.sh  verify_permissions.sh  watch_ccc.sh
src/: context_monitor.py
src/casewise_coordination/: __init__.py
src/casewise_coordination/cli/: __init__.py  (+2 more)
tests/: __init__.py  test_cli.py  test_orchestrator.py  test_session.py  test_task_distribution.py  test_templates.py
(+34 files in other folders)
