[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "casewise-coordination"
version = "0.1.0"
description = "Claude Code Coordinator - Orchestrate multiple Claude sessions"
authors = [{name = "natethegreatMD"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/natethegreatMD/casewise-claude-coordination-mcp"
Repository = "https://github.com/natethegreatMD/casewise-claude-coordination-mcp"
Issues = "https://github.com/natethegreatMD/casewise-claude-coordination-mcp/issues"

[project.scripts]
ccc = "casewise_coordination.cli:main"
ccc-server = "casewise_coordination.server.ccc_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true